@@ -1,5 +1,6 @@
 class CleanupNotifications < ApplicationJob
   def perform
     Notification::RssFeedItem.cleanup
+    Notification::DailyEmailItem.cleanup
   end
 end
