@@ -21,7 +21,7 @@ RSpec.describe DailyEmailMailer do
   end
 
   let!(:notification1) do
-    Notifications::DailyEmailItem.create(
+    Notification::DailyEmailItem.create(
       subscriber: subscription1.subscriber,
       event_type: event1.eventtype,
       event_payload: event1.read_attribute(:payload),
@@ -29,7 +29,7 @@ RSpec.describe DailyEmailMailer do
     )
   end
   let!(:notification2) do
-    Notifications::DailyEmailItem.create(
+    Notification::DailyEmailItem.create(
       subscriber: subscription1.subscriber,
       event_type: event2.eventtype,
       event_payload: event2.read_attribute(:payload),
